--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <center>
 <span class="venue tap_targets"><a href="https://icml.cc/Conferences/2022">ICML 2022 (Spotlight)</a></span>
 <span class="tag tap_targets">
-  <a href="https://arxiv.org/abs/2110.04156">Paper</a>&nbsp;
+  <a href="https://proceedings.mlr.press/v162/kurenkov22a.html">Paper</a>&nbsp;
   <a href="https://github.com/tinkoff-ai/eop">Code</a>&nbsp;
   <a href="files/bib.txt">Bibtex</a>
 </span>
